--- a/style.css
+++ b/style.css
@@ -2,6 +2,19 @@
     font-family: Helvetica, sans-serif;
 }
 
-h1 {
+body {
     text-align: center;
+}
+
+ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style-type: none;
+    margin: 0; 
+    padding: 0;
+}
+
+ul li {
+    text-align: left;
 }
