--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 * {
     font-family: Helvetica, sans-serif;
-    background-color:rgb(222, 221, 221)y;
+    background-color:rgb(222, 221, 221);
 }
 
 body {
     text-align: center;
+    display: block; 
+    background-color: lightslategray;
+    border: 2px red solid;
+    height: 50rem;
+    width: 50rem;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 ul, ol {
