--- a/style.css
+++ b/style.css
@@ -7,11 +7,18 @@ body {
     text-align: center;
     display: block; 
     background-color: lightslategray;
-    border: 2px red solid;
-    height: 50rem;
+    height: 200vh;
     width: 50rem;
     margin-left: auto;
     margin-right: auto;
+}
+
+h1 {
+    display: block;
+    background-color: lightslategray;
+    padding: 30px;
+    width: 46.25rem;
+
 }
 
 ul, ol {
