--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@ body {
     text-align: center;
     display: block; 
     background-color: lightslategray;
-    height: 200vh;
+    height: 180vh;
     width: 50rem;
     margin-left: auto;
     margin-right: auto;
+    border: 2px solid black;
 }
 
 h1 {
@@ -18,7 +19,12 @@ h1 {
     background-color: lightslategray;
     padding: 30px;
     width: 46.25rem;
+}
 
+h2, p, ul, li, ol, a{
+    display: block;
+    background-color: lightslategray;
+     
 }
 
 ul, ol {
